# book-api

./: .env.development  .env.production  Cargo.toml  Dockerfile  Makefile  README.md
.sqlx/: query-6a5f5df9bd3c34a80257bd4abcaac831f27c4db6008b1158576394c55bf47d17.json  query-975016e8bcd41fc93999d15cf5cc51745592ced1c03846d8451ea062ea4686a3.json  query-c8c48443d1c6d3964efeb5152b3198565a3890135c07463ebad67b0d9372c0aa.json  query-e40b4ad0588f84ad6f8dadfbc85a82b034c71bd36c1fd68ff3b824e41fc982da.json
assets/: openapi.yml  rapidoc-ui.html
migrations/: 20251101125830_book_table.up.sql
src/: lib.rs  main.rs  routes.rs  server.rs  types.rs
src/config/: databases.rs  logger.rs  mod.rs
src/handlers/: book.rs  mod.rs  web.rs
src/layers/: logger.rs  mod.rs  prometheus.rs
src/models/: book.rs
src/repositories/: book.rs
src/utils/: extractors.rs  query.rs  validation.rs
tests/: helper.rs
tests/api/: book.rs  mod.rs
tests/api/helpers/: book.rs  mod.rs
tests/web/: mod.rs
